--- a/package.json
+++ b/package.json
@@ -265,6 +265,7 @@
     "@storybook/addon-essentials": "6.2.0-beta.11",
     "@storybook/addon-links": "6.2.0-beta.11",
     "@storybook/react": "6.2.0-beta.11",
+    "@svgr/webpack": "^5.5.0",
     "@types/autosuggest-highlight": "3.1.0",
     "@types/dd-trace": "0.6.0",
     "@types/dedent": "0.7.0",
@@ -320,6 +321,7 @@
     "ejs-compiled-loader": "3.0.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
+    "esbuild-loader": "^2.13.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-graphql": "3.1.1",
