--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "geoformatter": "artsy/geoformatter",
     "geolib": "2.0.22",
     "glob": "7.1.3",
+    "google-libphonenumber": "^3.2.22",
     "graceful-fs": "4.2.4",
     "graphql": "14.5.8",
     "helmet": "2.3.0",
@@ -274,6 +275,7 @@
     "@types/enzyme": "3.1.11",
     "@types/express": "4.16.1",
     "@types/flickity": "2.2.2",
+    "@types/google-libphonenumber": "^7.4.21",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "24.0.18",
     "@types/jwt-decode": "2.2.0",
