--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "@artsy/express-reloadable": "1.4.8",
     "@artsy/fresnel": "1.9.0",
     "@artsy/gemup": "0.1.0",
-    "@artsy/palette": "17.1.0",
+    "@artsy/palette": "17.1.1-canary.1027.20364.0",
     "@artsy/palette-charts": "16.1.0",
     "@artsy/passport": "3.1.0",
     "@artsy/reaction": "29.2.1",
